objects/Super_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account_Sub_Type__c</fullName>
        <description>Account Sub Type of SAVM SuperGroup</description>
        <label>Account Sub Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type of SAVM SuperGroup</description>
        <label>Account Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>FDEV Group End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDEV_Super_Group_ID__c</fullName>
        <description>FDEV Super Group ID in FDEV</description>
        <label>Super Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentTerritory_ID__c</fullName>
        <description>Parent Territory ID for FDEV Group in FDEV</description>
        <label>ParentTerritory ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territory__c</fullName>
        <description>Parent Territory for FDEV Group in FDEV</description>
        <label>Parent Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <description>CSV format- Supergroup attribute</description>
        <label>Program Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>CSV format - Supergroup sales agent is stored</description>
        <label>Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Sub Segment of FDEV Group</description>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>FDEV Group Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Super_Group_Alias__c</fullName>
        <description>Email of Super Group Owner</description>
        <label>Super_Group_Alias</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Group_Owner__c</fullName>
        <description>Super Group Owner in FDEV</description>
        <label>Super Group Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryID__c</fullName>
        <description>Lowest Level Territory ID for FDEV Group</description>
        <label>TerritoryID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <description>Territory for an FDEV Group</description>
        <label>Territory_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Super Group Record Type in FDEV</description>
        <label>Sales Credit Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Primary_Detail__c</fullName>
        <description>Vertical Primary Detail for an FDEV Group</description>
        <label>Vertical_Primary_Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Primary_Sub__c</fullName>
        <description>Sub-Vertical for an FDEV Group</description>
        <label>Vertical_Primary_Sub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Primary_Top__c</fullName>
        <description>Vertical for an FDEV Group</description>
        <label>Vertical_Primary_Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>This object will store the FDEV super group information from FDEV</description>
    <label>Super Group</label>
    <nameField>
        <label>Super Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Direct_Super_Group</fullName>
        <active>true</active>
        <description>Direct Site Explosion Super Group</description>
        <label>Direct Super Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Overlay_Super_Group</fullName>
        <active>true</active>
        <description>Overlay Site Explosion Super Group</description>
        <label>Overlay Super Group</label>
    </recordTypes>
    <validationRules>
        <fullName>Super_Group_Mandatory_Type</fullName>
        <active>true</active>
        <description>"Type” Field should contain values as 'Direct' or 'Overlay'</description>
        <errorConditionFormula>Type__c != 'Overlay' &amp;&amp;Type__c != 'Direct'</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>‘Sales Credit Type can contain value as Direct or Overlay’</errorMessage>
    </validationRules>
</CustomObject>